--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@carto/mapbox-gl": "^0.45.0-carto1",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^2.0.1",
+    "angular2-counto": "^1.2.5",
+    "cartodb": "^0.5.1",
     "core-js": "^2.4.1",
+    "d3": "^5.5.0",
     "ngx-perfect-scrollbar": "5.3.5",
     "rxjs": "^5.5.6",
     "ts-md5": "^1.2.4",
